src/objects/Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Object__c</fullName>
        <label>Candidate Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Output_Field__c</fullName>
        <label>Candidate Output Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Score__c</fullName>
        <label>Minimum Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <defaultValue>&quot;Account&quot;</defaultValue>
        <label>Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Field__c</fullName>
        <label>Output Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Value__c</fullName>
        <label>Output Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <recordTypes>
        <fullName>Assignment</fullName>
        <active>false</active>
        <label>Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assignment_Scoring</fullName>
        <active>false</active>
        <label>Assignment &amp; Scoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scoring</fullName>
        <active>true</active>
        <label>Scoring</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>